[package]
name = "notes"
version = "0.0.0"
description = "V File Explorer"
authors = ["visnk"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon="1.7.0"
# tao = { version = "0.19.0"}
# du="0.1.1"
# gio="0.17.4"
walkdir="2.3.3"
filesize = "0.2.0"
# jwalk="0.8.1"
# dua-cli="2.19.2"
# dirscan="1.4.1"
markdown= {git="https://github.com/wooorm/markdown-rs.git"}
opener="0.6.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
