[package]
name = "filedime"
version = "0.3.1"
description = "rust based fast & functional file explorer."
authors = ["visnk"]
license = ""
repository = "https://github.com/visnkmr/filedime"
edition = "2021"

# [build]
# target-dir="H:\\rust_deps\\"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
lto = true
panic = "abort"

# [lib]
# crate-type = ["dylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
# prefstore= {path="../../../rust/prefstore/prefstore"}
prefstore= {git="https://github.com/visnkmr/prefstore.git"}
tauri = { version = "1.3.0", features = ["shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon="1.7.0"
image = "0.24.6"
# image = {git="https://codeberg.org/visnk/image-rs.git"}

fuzzy-matcher="0.3.7"
num_cpus="1.15.0"
rustc-hash="1.1.0"
# tao = { version = "0.19.0"}
# du="0.1.1"
# gio="0.17.4"
walkdir="2.3.3"
filesize = "0.2.0"
# jwalk="0.8.1"
# dua-cli="2.19.2"
# dirscan="1.4.1"
# markdown= {git="https://github.com/wooorm/markdown-rs.git"}
opener="0.6.1"
comrak="0.18.0"
# contrie="0.1.4"
chrono="0.4.24"
# strsim="0.10.0"
# notify="5.1.0"
filetime="0.2.21"
# rust_search = "2.0.0"
# infer="0.13.0"
# indicatif="0.17.3"
# radix_trie = "0.2.1"
rusync="0.7.2"
libc="0.2.144"
sysinfo="0.29.0"
ignore="0.4.20"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
